--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -125,6 +125,29 @@ li:hover {
 	text-align: center;
 	margin-bottom: 1em;
 }
+.categories {
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	align-items: center;
+	padding: 30px 0;
+	gap: 10px;
+}
+.cats-btn {
+	font-family: 'Syne';
+	font-weight: 700;
+	color: #1D6154;
+	border: 1px #1D6154 solid;
+	background-color: white;
+	text-align: center;
+	border-radius: 60px;
+	font-size: 16px;
+	padding: 10px 30px;
+}
+.cats-btn-selected {
+	background-color: #1D6154;
+	color: white;
+}
 .gallery {
 	width: 100%;
 	display: grid;
