--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -420,16 +420,20 @@ footer nav ul {
 	color: #000;
 }
 
-.modal-top-btn {
+.modal-top {
 	width: 100%;
 	display: flex;
 	justify-content: space-between;
 }
 
-.modal-top-btn button {
+.modal-top button {
 	background-color: transparent;
 	border: none;
 	cursor: pointer;
+}
+
+.modal-content {
+	padding: 2em;
 }
 
 .back-modal {
@@ -443,8 +447,6 @@ footer nav ul {
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	grid-column-gap: 10px;
 	grid-row-gap: 20px;
-	padding: 3em;
-
 }
 
 .modal-gallery img {
@@ -472,14 +474,18 @@ footer nav ul {
 .modal-separator {
 	height: 1px;
 	background: #B3B3B3;
-	margin: 3em;
+	margin-top: 3em;
+	width: 100%;
 }
-.modal-bottom{
+
+.modal-bottom {
 	display: flex;
 	justify-content: center;
 	align-items: center;
+	margin-top: 3em;
 }
-.modal__add-btn {
+
+.modal-btn {
 	font-family: 'Syne';
 	font-weight: 700;
 	color: white;
@@ -489,4 +495,79 @@ footer nav ul {
 	border: none;
 	padding: 10px 50px;
 	cursor: pointer;
+}
+
+.modal-form {
+	display: none;
+}
+
+.form-image-wrapper {
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
+	align-items: center;
+	border-radius: 3px;
+	background: #E8F1F6;
+	height: 169px;
+	width: 420px;
+	padding: 2em;
+}
+
+.form-image-wrapper label {
+	color: #306685;
+	text-align: center;
+	font-family: Work Sans;
+	font-size: 14px;
+	font-weight: 500;
+	padding: 10px 30px;
+	cursor: pointer;
+	border-radius: 50px;
+	background: #CBD6DC;
+}
+
+.form-image-wrapper p {
+	color: #444;
+	text-align: center;
+	font-family: Work Sans;
+	font-size: 10px;
+	font-weight: 400;
+	margin-top: 7px;
+}
+
+.modal form {
+	text-align: left;
+	margin-top: 30px;
+	display: flex;
+	flex-direction: column;
+}
+
+.modal input {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	background: #FFF;
+}
+
+.modal select {
+	height: 50px;
+	font-size: 1.2em;
+	border: none;
+	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
+	background: #FFF;
+}
+
+.modal label {
+	margin: 2em 0 1em 0;
+}
+
+.modal input[type="submit"] {
+	font-family: Syne;
+	text-align: center;
+	font-size: 14px;
+	font-weight: 700;
+	background: #A7A7A7;
+	color: #FFF;
+	border-radius: 60px;
+	
 }
