--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -319,6 +319,7 @@ nav a {
 	box-shadow: 0px 4px 14px rgba(0, 0, 0, 0.09);
 }
 
+/*** login***/
 #login {
 	width: 50%;
 	margin: auto;
@@ -381,6 +382,26 @@ input[type="submit"] {
 	border-radius: 60px;
 }
 
+
+#email-error {
+	display: none;
+}
+
+#password-error {
+	display: none;
+}
+
+#form-error {
+	display: none;
+}
+
+.error {
+	color: red;
+	font-size: 12px;
+	margin-top: 5px;
+}
+
+/***footer***/
 footer nav ul {
 	display: flex;
 	justify-content: flex-end;
@@ -569,5 +590,5 @@ footer nav ul {
 	background: #A7A7A7;
 	color: #FFF;
 	border-radius: 60px;
-	
+
 }
