--- a/FrontEnd/assets/style.css
+++ b/FrontEnd/assets/style.css
@@ -186,6 +186,9 @@ nav li {
 	padding: 0 10px;
 	font-size: 1.2em;
 }
+nav li img {
+	height: 22px;
+}
 
 nav a:hover {
 	color: #B1663C;
@@ -241,6 +244,7 @@ nav a {
 	margin-left: 2em;
 	text-decoration: none;
 	color: #000;
+	align-items: end;
 }
 
 .categories {
@@ -468,6 +472,7 @@ footer nav ul {
 	grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
 	grid-column-gap: 10px;
 	grid-row-gap: 20px;
+	padding-bottom: 2em;
 }
 
 .modal-gallery img {
@@ -517,10 +522,12 @@ footer nav ul {
 	font-size: 14px;
 	border-radius: 60px;
 	cursor: pointer;
+	width: 237px;
 }
 
 .modal-form {
 	display: none;
+	padding: 2em;
 }
 
 .form-image-wrapper {
